gcc/testsuite/g++.old-deja/g++.other/ptrmem3.C
// { dg-do assemble  }

class c {
  void (c::*x)();
public:
  void f() { this->x(); } // { dg-error "" } pointer-to-member
};
